# redocx

./: .gitignore  LICENSE  LISCENSE  README.md  configure  configure.ac
src/: Makefile  Makefile.am  Makefile.in  constants.h  mem.c  mem.h  redocx.c  temp.xml  test.c  xml.c  xml.h  zipfile.c  zipfile.h
